fix Codemirror overflow on <pre> issue

--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/modules/admin/_codemirror.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/modules/admin/_codemirror.scss
@@ -12,6 +12,7 @@
     padding-left: 7px;
     line-height: 1.25;
     margin-bottom: 0;
+    overflow: unset;
 }
 
 .CodeMirror-activeline-background {
